--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 } 
@@ -71,6 +71,7 @@ section {
     background-position: center;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start
 }
 .hero-cta {
     width: 35%;
@@ -78,7 +79,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -121,8 +122,6 @@ section {
 }
 /* HERO STYLE END */
 
-
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -136,10 +135,8 @@ section {
     background: #fce138;
 }
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
-    
-
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -152,9 +149,6 @@ section {
 .secondary-border {
     border-color: #39a6b2;
 }
-
-
-
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
@@ -290,4 +284,89 @@ section {
 }
 .flex-row {
  display: flex;
+}
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+    }
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+    header nav ul li a {
+        font-size: 20px
+    }
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+    .hero-cta, .hero-form {
+        width: 100%;
+    }
+    .hero-cta {
+        text-align: center;
+    }
+    .section-title {
+        width: 80%;
+    }
+    .trainer {
+        flex: 0 70%;
+    }
+    .contact-info iframe {
+        flex: 1 100%;
+
+    }
+}
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    .step-text {
+        flex: 100%;
+    }
+}
+@media screen and (max-width:575px) {
+   .hero-form button {
+       width: 100%;
+   }
+   .section-title {
+       width: 95%;
+   }
+   .intro p {
+       width: 100%;
+   }
+   .trainer {
+       flex: 0 100%;
+   }
+   .contact-info {
+       text-align: center;
+   }
+   .contact-info > * {
+       flex: 0 100%;
+   }
+   .contact-form {
+       order: 3;
+   }
+    
 }
